syntax = "proto3";
package main;

option go_package = "./pb";

message Msg {
  string  ServiceName  = 1;
  LoginRequest LoginRequest = 2;
  LoginResp LoginResp = 3;
  RegisterRequest RegisterRequest = 4;
  GetProfileRequest GetProfileRequest = 5;
  GetProfileResp GetProfileResp = 6;
  ChangeNicknameRequest ChangeNicknameRequest = 7;
  UpdatePicRequest UpdatePicRequest = 8;
  UpdatePicResp UpdatePicResp = 9;
  int32 Code = 10;
  string Message = 11;
}

message Response {
  int64 code = 1;
  string msg = 2;
  string token = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResp{
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message GetProfileRequest {
  string username = 1;
  string token = 2;
}

message GetProfileResp {
  string username = 1;
  string nickname = 2;
  string password = 3;
  string pic = 4;
}

message ChangeNicknameRequest {
  string username = 1;
  string nickname = 2;
  string token = 3;
}

message UpdatePicRequest {
  string username = 1;
  string pic = 2;
  string token = 3;
}

message UpdatePicResp {
  string pic = 1;
}
